--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,13 @@ p {
   padding: 0;
 }
 
+button {
+  margin: 0;
+  padding: 0;
+  border-width: 0;
+  cursor: pointer;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -83,13 +90,33 @@ img {
 
 .hero {
   position: relative;
-  width: 100%;
   height: 502px;
   padding-top: 194px;
   background-color: var(--hero-bg-color);
-  background-image: url(/images/mobile/hero-img@1x.png), url(/images/mobile/hero-circle@1x.png);
   background-repeat: no-repeat;
   background-position: top 92px right 32px, top 83px right 0;
+}
+@media (min-width: 768px) {
+  .hero {
+    height: 416px;
+    padding-top: 102px;
+  }
+}
+.webp .hero {
+  background-image: url(../images/mobile/hero-img@1x.webp), url(../images/mobile/hero-circle@1x.webp);
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .webp .hero {
+    background-image: url(../images/mobile/hero-img@2x.webp), url(../images/mobile/hero-circle@2x.webp);
+  }
+}
+.no-webp .hero {
+  background-image: url(../images/mobile/hero-img@1x.png), url(../images/mobile/hero-circle@1x.png);
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .no-webp .hero {
+    background-image: url(../images/mobile/hero-img@2x.png), url(../images/mobile/hero-circle@2x.png);
+  }
 }
 .hero__title {
   width: 218px;
@@ -114,4 +141,27 @@ img {
   border-radius: 20px;
   font-size: 8px;
   line-height: 1.25;
+}
+
+.description {
+  display: none;
+}
+@media (min-width: 768px) {
+  .description {
+    display: block;
+    width: 114px;
+    margin-top: 61px;
+    margin-left: 184px;
+  }
+  .description__text {
+    font-size: 8px;
+    line-height: 1.5;
+    margin-bottom: 7px;
+    color: var(--white-text-color);
+  }
+  .description__button {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+  }
 }/*# sourceMappingURL=main.css.map */
