--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -19,3 +19,12 @@ p {
   margin: 0;
   padding: 0;
 }
+
+button {
+  margin: 0;
+  padding: 0;
+  // color: inherit;
+  // background-color: transparent;
+  border-width: 0;
+  cursor: pointer;
+}
