--- a/sass/utils/_brackpoints.scss
+++ b/sass/utils/_brackpoints.scss
@@ -1,16 +1,16 @@
 $mobile: 480px;
 $tablet: 768px;
 $desktop: 1280px;
-$gap: 30px;
 
-@mixin for-phone-up {
+
+@mixin for-mobile-up {
   @media (min-width: 480px) {
     @content;
   }
 }
 
 @mixin for-tablet-up {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet) {
     @content;
   }
 }
