--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -38,6 +38,11 @@ body {
 .container {
    margin: 0 auto;
   padding: 0 20px;
+  // position: relative;
+
+  // @include for-tablet-up {
+  //   padding: 0 32px;
+  // }
 
 //   @media screen and (min-width: $mobile) {
 //     width: $mobile;
