--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,16 @@ body {
   margin: 0 auto;
   padding: 0 20px;
 }
+@media (min-width: 768px) {
+  .container {
+    padding: 0 32px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    padding: 0 16px;
+  }
+}
 
 img {
   display: block;
@@ -91,16 +101,19 @@ img {
 .hero {
   position: relative;
   height: 502px;
-  padding-top: 194px;
   background-color: var(--hero-bg-color);
   background-repeat: no-repeat;
   background-size: 171px 410px, 284px 344px;
   background-position: top 92px right 32px, top 83px right 0;
 }
+.hero .hero-inner {
+  position: relative;
+  padding-top: 194px;
+}
 .webp .hero {
   background-image: url(../images/mobile/hero-img@1x.webp), url(../images/mobile/hero-circle@1x.webp);
 }
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
   .webp .hero {
     background-image: url(../images/mobile/hero-img@2x.webp), url(../images/mobile/hero-circle@2x.webp);
   }
@@ -108,7 +121,7 @@ img {
 .no-webp .hero {
   background-image: url(../images/mobile/hero-img@1x.png), url(../images/mobile/hero-circle@1x.png);
 }
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
   .no-webp .hero {
     background-image: url(../images/mobile/hero-img@2x.png), url(../images/mobile/hero-circle@2x.png);
   }
@@ -116,15 +129,18 @@ img {
 @media (min-width: 768px) {
   .hero {
     height: 416px;
-    padding-top: 102px;
     background-size: 143px 336px, 335px 333px;
     background-position: top 80px right 303px, top 43px right 185px;
+  }
+  .hero .hero-inner {
+    padding-top: 102px;
+    height: 416px;
   }
   .webp .hero {
     background-image: url(../images/tablet/hero-img@1x.webp), url(../images/tablet/hero-circle@1x.webp);
   }
 }
-@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192dpi), (min-width: 768px) and (min-resolution: 2dppx) {
+@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx), (min-width: 768px) and (min-resolution: 192dpi) {
   .webp .hero {
     background-image: url(../images/tablet/hero-img@2x.webp), url(../images/tablet/hero-circle@2x.webp);
   }
@@ -134,9 +150,38 @@ img {
     background-image: url(../images/tablet/hero-img@1x.png), url(../images/tablet/hero-circle@1x.png);
   }
 }
-@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192dpi), (min-width: 768px) and (min-resolution: 2dppx) {
+@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx), (min-width: 768px) and (min-resolution: 192dpi) {
   .no-webp .hero {
     background-image: url(../images/tablet/hero-img@2x.png), url(../images/tablet/hero-circle@2x.png);
+  }
+}
+@media (min-width: 1200px) {
+  .hero {
+    height: 664px;
+    background-size: 236px 557px, 534px 534px;
+    background-position: top 108px right 328px, top 54px right 149px;
+  }
+  .hero .hero-inner {
+    padding-top: 147px;
+    height: 664px;
+  }
+  .webp .hero {
+    background-image: url(../images/desktop/hero-img@1x.webp), url(../images/desktop/hero-circle@1x.webp);
+  }
+}
+@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx), (min-width: 1200px) and (min-resolution: 192dpi) {
+  .webp .hero {
+    background-image: url(../images/desktop/hero-img@2x.webp), url(../images/desktop/hero-circle@2x.webp);
+  }
+}
+@media (min-width: 1200px) {
+  .no-webp .hero {
+    background-image: url(../images/desktop/hero-img@1x.png), url(../images/desktop/hero-circle@1x.png);
+  }
+}
+@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx), (min-width: 1200px) and (min-resolution: 192dpi) {
+  .no-webp .hero {
+    background-image: url(../images/desktop/hero-img@2x.png), url(../images/desktop/hero-circle@2x.png);
   }
 }
 .hero__title {
@@ -149,8 +194,17 @@ img {
 }
 @media (min-width: 768px) {
   .hero__title {
+    width: 162px;
     font-size: 22px;
     line-height: 1.136;
+  }
+}
+@media (min-width: 1200px) {
+  .hero__title {
+    width: 277px;
+    font-size: 38px;
+    line-height: 1.158;
+    margin-bottom: 24px;
   }
 }
 .hero__title-accent {
@@ -164,10 +218,24 @@ img {
     line-height: 0.905;
   }
 }
+@media (min-width: 1200px) {
+  .hero__title-accent {
+    font-size: 58px;
+  }
+}
+.hero__images {
+  display: none;
+}
+@media (min-width: 768px) {
+  .hero__images {
+    display: block;
+  }
+}
 
 .hero-list {
   display: flex;
   gap: 8px;
+  gap: 12px;
 }
 .hero-list__link {
   padding: 7px 14px;
@@ -175,7 +243,95 @@ img {
   font-size: 8px;
   line-height: 1.25;
 }
+@media (min-width: 1200px) {
+  .hero-list__link {
+    padding: 11px 22px;
+    font-size: 14px;
+    line-height: 1.286;
+  }
+}
 
+.sale-list {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sale-list {
+    display: block;
+    position: absolute;
+    top: 94px;
+    right: 0;
+  }
+  .sale-list__item {
+    text-align: right;
+    padding-right: 9px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .sale-list__item {
+    padding-right: 18px;
+  }
+}
+@media (min-width: 768px) {
+  .sale-list__item + .sale-list__item {
+    margin-top: 16px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .sale-list__item + .sale-list__item {
+    margin-top: 18px;
+  }
+}
+@media (min-width: 768px) {
+  .sale-list__title {
+    position: relative;
+    font-size: 28px;
+    line-height: 1.143;
+    letter-spacing: 0.04em;
+    color: var(--title-text-color);
+    z-index: 1;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .sale-list__title {
+    font-size: 46px;
+    line-height: 1.152;
+  }
+}
+@media (min-width: 768px) {
+  .sale-list__title::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: -1px;
+    right: -9px;
+    z-index: -1;
+    border-radius: 50%;
+    background-color: var(--white-text-color);
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .sale-list__title::before {
+    width: 30px;
+    height: 30px;
+    top: -3px;
+    right: -18px;
+  }
+}
+@media (min-width: 768px) {
+  .sale-list__text {
+    font-size: 8px;
+    line-height: 1.5;
+    color: var(--white-text-color);
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .sale-list__text {
+    font-size: 14px;
+    line-height: 1.286;
+  }
+}
 .description {
   display: none;
 }
@@ -186,27 +342,118 @@ img {
     margin-top: 61px;
     margin-left: 152px;
   }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description {
+    width: 200px;
+    margin-top: 108px;
+    margin-left: 213px;
+  }
+}
+@media (min-width: 768px) {
   .description__text {
     font-size: 8px;
     line-height: 1.5;
     margin-bottom: 7px;
     color: var(--white-text-color);
   }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description__text {
+    font-size: 14px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 768px) {
   .description__button {
+    position: relative;
+    border-radius: 50%;
     width: 18px;
     height: 18px;
-    border-radius: 50%;
+    transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description__button {
+    width: 26px;
+    height: 26px;
+  }
+}
+@media (min-width: 768px) {
+  .description__button:hover, .description__button:focus {
+    transform: scale(1.02);
+    box-shadow: 2px 2px 4px rgba(1, 1, 1, 0.3);
+  }
+  .description__button:hover::before, .description__button:hover::after, .description__button:hover .description__icon, .description__button:focus::before, .description__button:focus::after, .description__button:focus .description__icon {
+    background-color: var(--white-text-color);
+  }
+}
+@media (min-width: 768px) {
+  .description__button::before, .description__button::after, .description__icon {
+    display: block;
+    position: absolute;
+    height: 2px;
+    background-color: var(--title-text-color);
+    content: "";
+  }
+}
+@media (min-width: 768px) {
+  .description__icon {
+    right: 5px;
+    width: 6px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description__icon {
+    right: 8px;
+    width: 8px;
+  }
+}
+@media (min-width: 768px) {
+  .description__button::before {
+    width: 3px;
+    right: 6px;
+    top: 6px;
+    transform: rotate(45deg);
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description__button::before {
+    width: 5px;
+    right: 8px;
+    top: 10px;
+  }
+}
+@media (min-width: 768px) {
+  .description__button::after {
+    width: 3px;
+    right: 6px;
+    bottom: 6px;
+    transform: rotate(-45deg);
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .description__button::after {
+    width: 5px;
+    right: 8px;
+    bottom: 10px;
   }
 }
 
 .bio-eco {
   position: absolute;
-  left: 32px;
+  left: 0;
   bottom: 16px;
+}
+@media (min-width: 1200px) {
+  .bio-eco {
+    bottom: 60px;
+  }
 }
 
 .so-tasty {
   position: absolute;
-  right: 32px;
+  right: 0;
   bottom: 0px;
 }/*# sourceMappingURL=main.css.map */
