--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -40,9 +40,13 @@ body {
   padding: 0 20px;
   // position: relative;
 
-  // @include for-tablet-up {
-  //   padding: 0 32px;
-  // }
+  @include for-tablet-up {
+    padding: 0 32px;
+  }
+
+  @include for-desktop-up {
+    padding: 0 16px;
+  }
 
 //   @media screen and (min-width: $mobile) {
 //     width: $mobile;
