--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,9 +1,10 @@
 .hero {
   position: relative;
-
-  // width: 100%;
   height: 502px;
-  padding-top: 194px;
+  .hero-inner {
+    position: relative;
+    padding-top: 194px;
+  }
 
   background-color: var(--hero-bg-color);
   background-repeat: no-repeat;
@@ -12,17 +13,13 @@
   .webp & {
     background-image: url(../images/mobile/hero-img@1x.webp), url(../images/mobile/hero-circle@1x.webp);
         
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include for-pixel-ratio-2 {
       background-image: url(../images/mobile/hero-img@2x.webp), url(../images/mobile/hero-circle@2x.webp);
           }
   }
   .no-webp &{
     background-image: url(../images/mobile/hero-img@1x.png), url(../images/mobile/hero-circle@1x.png);
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include for-pixel-ratio-2 {
     background-image: url(../images/mobile/hero-img@2x.png), url(../images/mobile/hero-circle@2x.png);
       }
   }
@@ -30,15 +27,16 @@
 
   @include for-tablet-up {
     height: 416px;
-    padding-top: 102px;
+    .hero-inner {
+      padding-top: 102px;
+          height: 416px;
+    }
     background-size: 143px 336px, 335px 333px;
     background-position: top 80px right 303px, top 43px right 185px;
     .webp & {
     background-image: url(../images/tablet/hero-img@1x.webp), url(../images/tablet/hero-circle@1x.webp);
   
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include for-pixel-ratio-2 {
       background-image: url(../images/tablet/hero-img@2x.webp), url(../images/tablet/hero-circle@2x.webp);
       }
     }
@@ -46,15 +44,40 @@
   .no-webp & {
     background-image: url(../images/tablet/hero-img@1x.png), url(../images/tablet/hero-circle@1x.png);
   
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include for-pixel-ratio-2 {
       background-image: url(../images/tablet/hero-img@2x.png), url(../images/tablet/hero-circle@2x.png);
       }
     }
   }
-
   
+  @include for-desktop-up {
+    height: 664px;
+
+    .hero-inner {
+      padding-top: 147px;
+      height: 664px;
+    }
+
+    background-size: 236px 557px, 534px 534px;
+    background-position: top 108px right 328px,
+    top 54px right 149px;
+
+    .webp & {
+      background-image: url(../images/desktop/hero-img@1x.webp), url(../images/desktop/hero-circle@1x.webp);
+
+      @include for-pixel-ratio-2 {
+        background-image: url(../images/desktop/hero-img@2x.webp), url(../images/desktop/hero-circle@2x.webp);
+      }
+    }
+
+    .no-webp & {
+      background-image: url(../images/desktop/hero-img@1x.png), url(../images/desktop/hero-circle@1x.png);
+
+      @include for-pixel-ratio-2 {
+        background-image: url(../images/desktop/hero-img@2x.png), url(../images/desktop/hero-circle@2x.png);
+      }
+    }
+  }
 
 
   &__title{
@@ -63,16 +86,22 @@
     font-size: 26px;
     line-height: 1.154;
     letter-spacing: 0.04em;
+
+    margin-bottom: 20px;
     @include for-tablet-up {
+      width: 162px;
       font-size: 22px;
       line-height: 1.136;
     }
-
-    margin-bottom: 20px;
-    
+    @include for-desktop-up {
+      width: 277px;
+      font-size: 38px;
+      line-height: 1.158;
+      margin-bottom: 24px;
+    }
     color: var(--white-text-color);
-
   }
+
   &__title-accent {
     font-size: 48px;
     line-height: 0.965;
@@ -80,27 +109,25 @@
       font-size: 34px;
       line-height: 0.905;
     }
-
+    @include for-desktop-up {
+      font-size: 58px;
+    }
     color: var(--title-text-color);
   }
 
-  // &__images {
-  //   display: none;
-  //   @include for-tablet-up {
-  //     display: block;
-  //   }
-  // }
-
-  // .hero__bio-eco {
-  //   position: absolute;
-  //   left: 0;
-  //   bottom: 16px;
-  // }
+  &__images {
+    display: none;
+    @include for-tablet-up {
+      display: block;
+    }
+  }
 }
 
 .hero-list {
   display: flex;
   gap: 8px;
+  @include for-desktop-up {}
+  gap: 12px;
 
   &__link {
     padding: 7px 14px;
@@ -108,14 +135,87 @@
 
     font-size: 8px;
     line-height: 1.25;
-    // color: var(--title-text-color);
-    // background-color: var(--white-text-color) ;
 
+    @include for-desktop-up {
+      padding: 11px 22px;
+      font-size: 14px;
+      line-height: 1.286;
+    }
   }
 }
 
+.sale-list {
+  display: none;
 
+  @include for-tablet-up {
+    display: block;
+    position: absolute;
+    top: 94px;
+    right: 0;
+  
+    &__item {
+      text-align: right;
+      padding-right: 9px;
+      @include for-desktop-up {
+        padding-right: 18px;
+      }
+    }
+  
+    &__item + &__item {
+      margin-top: 16px;
+      @include for-desktop-up {
+        margin-top: 18px;
+      }
+    }
+    
+    &__title {
+      position: relative;
+      font-size: 28px;
+      line-height: 1.143;
+      letter-spacing: 0.04em;
+      color: var(--title-text-color);
+      z-index: 1;
+      @include for-desktop-up {
+        font-size: 46px;
+        line-height: 1.152;
+      }
+    }
+    
+    &__title::before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: -1px;
+      right: -9px;
+      z-index: -1;
+      @include for-desktop-up {
+        width: 30px;
+        height: 30px;
+              top: -3px;
+                right: -18px;
+      }
+      border-radius: 50%;
+      background-color: var(--white-text-color);
+    }
+  
+    &__text {
+      font-size: 8px;
+      line-height: 1.5;
+      color: var(--white-text-color);
+      @include for-desktop-up {
+        font-size: 14px;
+        line-height: 1.286;
+      }
+    }
+  }
 
+  @include for-desktop-up {
+
+  }
+
+}
 
 .description {
   display: none;
@@ -125,31 +225,103 @@
     width: 114px;
     margin-top: 61px;
     margin-left: 152px;
+    @include for-desktop-up {
+      width: 200px;
+      margin-top: 108px;
+      margin-left: 213px;
+    }
   
     &__text {
       font-size: 8px;
       line-height: 1.5;
       margin-bottom: 7px;
       color: var(--white-text-color);
+
+      @include for-desktop-up {
+        font-size: 14px;
+        line-height: 1.4;
+        margin-bottom: 20px;
+      }
     }
   
     &__button {
+      position: relative;
+      border-radius: 50%;
       width: 18px;
       height: 18px;
-      border-radius: 50%;
+      @include for-desktop-up {
+        width: 26px;
+        height: 26px;
+      }
+      transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s;
     }
+    &__button:hover,
+    &__button:focus {
+      transform: scale(1.02);
+      box-shadow: 2px 2px 4px rgb(1 1 1 / 30%);
+      &::before, &::after, .description__icon {
+      background-color: var(--white-text-color);
+      // transition: transform 2.2s, background-color 5.2s;
+      }
+    }
+
+    &__button::before,
+    &__button::after,
+    &__icon {
+      display: block;
+      position: absolute;
+      height: 2px;
+      background-color: var(--title-text-color);
+      content: '';
+      // border-radius: 2px;
+    }
+    &__icon {
+      right: 5px;
+      width: 6px;
+      @include for-desktop-up {
+        right: 8px;
+        width: 8px;
+      }
+    }
+
+    &__button::before{
+      width: 3px;
+      right: 6px;
+      top: 6px;
+      @include for-desktop-up {
+        width: 5px;
+        right: 8px;
+        top: 10px;
+      }
+      transform: rotate(45deg);
+    }
+    &__button::after {
+      width: 3px;
+      right: 6px;
+      bottom: 6px;
+      @include for-desktop-up {
+        width: 5px;
+        right: 8px;
+        bottom: 10px;
+      }
+      transform: rotate(-45deg);
+    }
+
   }
  
 }
 
 .bio-eco {
   position: absolute;
-  left: 32px;
+  left: 0;
   bottom: 16px;
+  @include for-desktop-up {
+    bottom: 60px;
+  }
 }
 
 .so-tasty {
   position: absolute;
-  right: 32px;
+  right: 0;
   bottom: 0px;
 }
